chore(deps): husky@9
migration steps grabbed from here: https://github.com/typicode/husky/releases/tag/v9.0.1

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "ajv": "^8.11.0",
     "alex": "^11.0.0",
     "eslint": "^8.47.0",
-    "husky": "^8.0.0",
+    "husky": "^9.0.10",
     "js-yaml": "^4.1.0",
     "knip": "^4.3.0",
     "msw": "^2.0.3",
@@ -112,7 +112,7 @@
     "lint:ts": "eslint . --ext .js,.ts",
     "prebuild": "rm -rf dist/",
     "prepack": "npm run build",
-    "prepare": "husky install",
+    "prepare": "husky",
     "pretest": "npm run build",
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
