--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "string-argv": "^0.3.1",
     "table": "^6.8.1",
     "tmp-promise": "^3.0.2",
+    "toposort": "^2.0.2",
     "update-notifier": "^7.0.0",
     "validator": "^13.7.0"
   },
