--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "string-argv": "^0.3.1",
     "table": "^6.8.1",
     "tmp-promise": "^3.0.2",
+    "toposort": "^2.0.2",
     "update-notifier": "^7.0.0",
     "validator": "^13.7.0"
   },
@@ -83,6 +84,7 @@
     "@types/pluralize": "^0.0.33",
     "@types/prompts": "^2.4.2",
     "@types/semver": "^7.3.12",
+    "@types/toposort": "^2.0.7",
     "@types/update-notifier": "^6.0.5",
     "@types/validator": "^13.7.6",
     "@vitest/coverage-v8": "^1.1.0",
