--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "type": "module",
   "dependencies": {
     "@actions/core": "^1.6.0",
-    "@oclif/core": "^3.18.1",
+    "@oclif/core": "^3.19.3-dev.0",
     "@oclif/plugin-autocomplete": "^3.0.5",
     "@oclif/plugin-help": "^6.0.11",
     "@oclif/plugin-warn-if-update-available": "^3.0.9",
@@ -99,7 +99,7 @@
     "knip": "^4.3.0",
     "msw": "^2.0.3",
     "nock": "^13.2.7",
-    "oclif": "^4.3.1",
+    "oclif": "^4.4.13-dev.0",
     "openapi-types": "^12.1.3",
     "pkg": "^5.8.1",
     "prettier": "^3.0.2",
