--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/validator": "^13.7.6",
     "@vitest/coverage-v8": "^1.1.0",
     "@vitest/expect": "^1.1.0",
+    "@yao-pkg/pkg": "^5.11.4",
     "ajv": "^8.11.0",
     "alex": "^11.0.0",
     "eslint": "^8.47.0",
@@ -98,7 +99,6 @@
     "msw": "^2.0.3",
     "nock": "^13.2.7",
     "openapi-types": "^12.1.3",
-    "pkg": "^5.8.1",
     "prettier": "^3.0.2",
     "rollup": "^4.3.0",
     "ts-node": "^10.9.1",
