--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
     "rollup": "^4.3.0",
-    "ts-node": "^10.9.1",
+    "tsx": "^4.7.3",
     "type-fest": "^4.3.1",
     "typescript": "^5.1.6",
     "vitest": "^1.1.0"
@@ -109,7 +109,7 @@
   "scripts": {
     "build": "tsc",
     "build:exe": "npm run build && rollup -c && pkg dist/rollup-output.cjs --target host --output exe/rdme",
-    "debug": "ts-node src/cli.ts",
+    "debug": "tsx src/cli.ts",
     "lint": "alex . && knip && npm run lint:ts && npm run prettier && npm run schemas:check",
     "lint:ts": "eslint . --ext .js,.ts",
     "prebuild": "rm -rf dist/",
