--- a/package.json
+++ b/package.json
@@ -119,9 +119,7 @@
     "prettier": "prettier --check .",
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
-    "test": "npm run test:multi && npm run test:single",
-    "test:multi": "vitest run --coverage",
-    "test:single": "vitest run --coverage --config vitest.single-threaded.config.ts"
+    "test": "vitest run --coverage"
   },
   "commitlint": {
     "extends": [
