--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "js-yaml": "^4.1.0",
     "knip": "^5.0.2",
     "msw": "^2.0.3",
-    "nock": "^13.2.7",
+    "nock": "^14.0.0-beta.6",
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
     "rollup": "^4.3.0",
