--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@types/toposort": "^2.0.7",
     "@types/update-notifier": "^6.0.5",
     "@types/validator": "^13.7.6",
-    "@vitest/coverage-v8": "^1.1.0",
+    "@vitest/coverage-v8": "^1.6.0",
     "@vitest/expect": "^1.1.0",
     "@yao-pkg/pkg": "^5.11.4",
     "ajv": "^8.11.0",
@@ -97,14 +97,14 @@
     "js-yaml": "^4.1.0",
     "knip": "^5.0.2",
     "msw": "^2.0.3",
-    "nock": "^13.2.7",
+    "nock": "^14.0.0-beta.6",
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
     "rollup": "^4.3.0",
     "tsx": "^4.7.3",
     "type-fest": "^4.3.1",
     "typescript": "^5.1.6",
-    "vitest": "^1.1.0"
+    "vitest": "^1.6.0"
   },
   "scripts": {
     "build": "tsc",
