--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -37,3 +37,10 @@ updates:
       - dependency-name: ora
         versions:
           - '>= 7'
+      # There are ProxyAgent discrepancies between undici@6 and
+      # the Node.js fetch implementation (which uses undici@5).
+      # Until we use undici itself for fetch calls, we should
+      # pin undici to the version used in Node.js core.
+      - dependency-name: undici
+        versions:
+          - '>= 6'
