--- a/package.json
+++ b/package.json
@@ -43,11 +43,9 @@
     "command-line-usage": "^7.0.1",
     "configstore": "^6.0.0",
     "debug": "^4.3.3",
-    "formdata-node": "^6.0.3",
     "gray-matter": "^4.0.1",
     "ignore": "^5.2.0",
     "mime-types": "^2.1.35",
-    "node-fetch": "^3.3.2",
     "oas": "^24.0.0",
     "oas-normalize": "^11.0.1",
     "open": "^10.0.2",
@@ -61,6 +59,7 @@
     "table": "^6.8.1",
     "tmp-promise": "^3.0.2",
     "toposort": "^2.0.2",
+    "undici": "^5.28.4",
     "update-notifier": "^7.0.0",
     "validator": "^13.7.0"
   },
@@ -96,7 +95,6 @@
     "husky": "^9.0.10",
     "js-yaml": "^4.1.0",
     "knip": "^5.0.2",
-    "msw": "^2.0.3",
     "nock": "^14.0.0-beta.6",
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
