chore(deps): bump (#1041)
## 🧰 Changes

Before:

```
Package                                Current          Wanted   Latest  Location                                      Depended by
@commitlint/cli                         19.3.0          19.4.1   19.4.1  node_modules/@commitlint/cli                  rdme
@commitlint/config-conventional         19.2.2          19.4.1   19.4.1  node_modules/@commitlint/config-conventional  rdme
@readme/eslint-config                   14.0.0          14.1.2   14.1.2  node_modules/@readme/eslint-config            rdme
@readme/oas-examples                    5.16.0          5.18.2   5.18.2  node_modules/@readme/oas-examples             rdme
@rollup/plugin-commonjs                 25.0.8          25.0.8   26.0.1  node_modules/@rollup/plugin-commonjs          rdme
@types/validator                       13.12.0         13.12.1  13.12.1  node_modules/@types/validator                 rdme
@vitest/coverage-v8                      1.6.0           1.6.0    2.0.5  node_modules/@vitest/coverage-v8              rdme
@vitest/expect                           1.6.0           1.6.0    2.0.5  node_modules/@vitest/expect                   rdme
@yao-pkg/pkg                            5.12.0          5.13.0   5.13.0  node_modules/@yao-pkg/pkg                     rdme
ajv                                     8.16.0          8.17.1   8.17.1  node_modules/ajv                              rdme
command-line-args                        5.2.1           5.2.1    6.0.0  node_modules/command-line-args                rdme
command-line-usage                       7.0.1           7.0.3    7.0.3  node_modules/command-line-usage               rdme
configstore                              6.0.0           6.0.0    7.0.0  node_modules/configstore                      rdme
debug                                    4.3.5           4.3.7    4.3.7  node_modules/debug                            rdme
eslint                                  8.57.0          8.57

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,28 +5,24 @@
     {
       "files": ["bin/*.js"],
       "rules": {
-        "@typescript-eslint/no-var-requires": "off"
-      }
-    }
+        "@typescript-eslint/no-var-requires": "off",
+      },
+    },
   ],
   "env": {
     "es2021": true,
-    "node": true
+    "node": true,
   },
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
   },
   "rules": {
-    "@typescript-eslint/ban-types": [
-      "error",
-      {
-        "types": {
-          // We specify `{}` in `CommandOptions` generics when those commands don't have their own
-          // options and it's cleaner for us to do that than `Record<string, unknown>`.
-          "{}": false
-        }
-      }
-    ],
+    // We specify `{}` in `CommandOptions` generics when those commands don't have their own
+    // options and it's cleaner for us to do that than `Record<string, unknown>`.
+    "@typescript-eslint/no-empty-object-type": "off",
+
+    // We already have top-level error handling across the codebase, so this rule is not helpful for us.
+    "try-catch-failsafe/json-parse": "off",
 
     /**
      * Because our command classes have a `run` method that might not always call `this` we need to
@@ -57,13 +53,13 @@
         "paths": [
           {
             "name": "ci-info",
-            "message": "The `ci-info` package is difficult to test because misleading results will appear when running tests in the GitHub Actions runner. Instead of importing this package directly, create a wrapper function in `lib/isCI.ts` and import that instead."
-          }
-        ]
-      }
+            "message": "The `ci-info` package is difficult to test because misleading results will appear when running tests in the GitHub Actions runner. Instead of importing this package directly, create a wrapper function in `lib/isCI.ts` and import that instead.",
+          },
+        ],
+      },
     ],
 
     // This rule is only really applicable for OSS libraries and doesn't apply to rdme's case.
-    "readme/no-dual-exports": "off"
-  }
+    "readme/no-dual-exports": "off",
+  },
 }
