--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
   "type": "module",
   "dependencies": {
     "@actions/core": "^1.6.0",
-    "@oclif/core": "^3.20.1-dev.0",
-    "@oclif/plugin-autocomplete": "^3.0.5",
-    "@oclif/plugin-help": "^6.0.11",
-    "@oclif/plugin-warn-if-update-available": "^3.0.9",
+    "@oclif/core": "^4.0.29",
+    "@oclif/plugin-autocomplete": "^3.2.6",
+    "@oclif/plugin-help": "^6.2.15",
+    "@oclif/plugin-warn-if-update-available": "^3.1.19",
     "chalk": "^5.3.0",
     "ci-info": "^4.0.0",
     "configstore": "^7.0.0",
@@ -104,7 +104,7 @@
     "js-yaml": "^4.1.0",
     "knip": "^5.0.2",
     "nock": "^14.0.0-beta.7",
-    "oclif": "^4.4.13-dev.1",
+    "oclif": "^4.15.9",
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
     "rollup": "^4.3.0",
