--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
+    "@oclif/test": "^4.1.0",
     "@readme/better-ajv-errors": "^1.5.0",
     "@readme/eslint-config": "^14.0.0",
     "@readme/oas-examples": "^5.10.0",
@@ -104,7 +105,7 @@
     "js-yaml": "^4.1.0",
     "knip": "^5.0.2",
     "nock": "^14.0.0-beta.7",
-    "oclif": "^4.15.9",
+    "oclif": "^4.15.12",
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
     "rollup": "^4.3.0",
