--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,8 +42,7 @@ jobs:
 
       # TODO: write a smol explainer comment
       - name: Rebuild GitHub Action for testing purposes
-        run: 'npm run build:gha'
-        working-directory: rdme-repo
+        run: 'npm ci && npm run build:gha'
 
       # And finally, with our updated documentation,
       # we run the `rdme` GitHub Action to sync the Markdown file
