feat: attempt to use pre-run hook to create package.json

--- a/action.yml
+++ b/action.yml
@@ -13,4 +13,5 @@ outputs:
     description: The rdme command result output
 runs:
   using: node20
+  pre: bin/write-gha-pjson.js
   main: dist-gha/run.cjs
