ci: oclif mess around (#1067)
| 🚥 Resolves ISSUE_ID |
| :------------------- |

## 🧰 Changes

(still in-progress) separate PR from
[#1068](https://github.com/readmeio/rdme/pull/1068) with a new
architecture for github actions that plays nicely with oclif.

outstanding work:
- [ ] remove all docker build/tagging/release code
- [ ] update `semantic-release` workflow to support this new process.
here are the assets we'll need to consider every time we tag a release
([link](https://github.com/readmeio/rdme/blob/d01d76fe3c2e4a98b4f5c415be03e589fbe3b56e/.releaserc.yml#L30)):
  - [ ] command list README (i.e., the one generated by `oclif readme`
- [ ] we do **not** need to update `action.yml` on every release anymore
- [ ] everything in `dist-gha` (the two JS files ~~and `package.json`~~)
- [ ] (do we need an `oclif` manifest in this directory? probably not?)
- [ ] we might not actually need to track this duplicated `package.json`
— what if we used the
[`runs.pre`](https://docs.github.com/en/actions/sharing-automations/creating-actions/metadata-syntax-for-github-actions#runspre)
script to generate it?
  - [ ] package/package-lock.json
  - [ ] CHANGELOG.md
- [ ] `oclif` manifest (this one is interesting... we probably don't
need to git track it but it should be included in our npm assets)

## 🧬 QA & Testing

Provide as much information as you can on how to test what you've done.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,17 +64,10 @@ jobs:
           path: oas-examples-repo
           repository: readmeio/oas-examples
 
-      # For every GitHub Action release, we deploy our Docker images
-      # to the GitHub Container Registry for performance reasons.
-      # Instead of testing against the pre-built image, we can build
-      # an image from the currently checked-out repo contents by doing a
-      # li'l update in the action.yml file to point to the current Dockerfile.
-      - name: Replace Docker image value in action.yml
-        uses: jacobtomlinson/gha-find-replace@v3
-        with:
-          find: 'image:.*'
-          replace: "image: 'Dockerfile'"
-          include: rdme-repo/action.yml
+      # TODO: write a smol explainer comment
+      - name: Rebuild GitHub Action for testing purposes
+        run: 'npm ci && npm run build:gha'
+        working-directory: rdme-repo
 
       - name: Run `openapi:validate` command
         uses: ./rdme-repo/
