--- a/package.json
+++ b/package.json
@@ -39,10 +39,6 @@
   "bugs": {
     "url": "https://github.com/readmeio/rdme/issues"
   },
-  "pkg": {
-    "scripts": "dist/**/*.js",
-    "assets": "package.json"
-  },
   "type": "module",
   "dependencies": {
     "@actions/core": "^1.6.0",
@@ -66,6 +62,7 @@
     "prompts": "^2.4.2",
     "semver": "^7.5.3",
     "simple-git": "^3.19.1",
+    "string-argv": "^0.3.2",
     "table": "^6.8.1",
     "tmp-promise": "^3.0.2",
     "toposort": "^2.0.2",
@@ -83,6 +80,7 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-replace": "^6.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/configstore": "^6.0.0",
     "@types/debug": "^4.1.7",
     "@types/js-yaml": "^4.0.5",
@@ -95,7 +93,6 @@
     "@types/validator": "^13.7.6",
     "@vitest/coverage-v8": "^2.0.5",
     "@vitest/expect": "^2.0.5",
-    "@yao-pkg/pkg": "^6.1.0",
     "ajv": "^8.11.0",
     "alex": "^11.0.0",
     "eslint": "^8.47.0",
@@ -113,7 +110,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "build:exe": "npm run build && rollup -c && pkg dist/rollup-output.cjs --target host --output exe/rdme",
+    "build:gha": "npm run build && rollup --config",
+    "build:gha:prod": "npm run build:gha -- --environment PRODUCTION_BUILD",
     "lint": "alex . && knip && npm run lint:ts && npm run prettier && npm run schemas:check",
     "lint:ts": "eslint . --ext .js,.ts",
     "prebuild": "rm -rf dist/ && rm -f src/package.json && ln package.json src/package.json",
