--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ exe/
 node_modules/
 tmp/
 
-# required for building with TS
+# required for building with TS + oclif + GitHub Actions
 dist-gha/package.json
 src/package.json
