--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -34,7 +34,7 @@ plugins:
   - [
       '@semantic-release/exec',
       {
-        # Verify existence of gh and docker CLIs
+        # Verify existence of docker CLI
         'verifyConditionsCmd': './bin/verify-clis.sh',
         # Sets the next version as a GitHub Actions output parameter for usage in subsequent workflow steps
         # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-output-parameter
