feat: revamp build process
- update semantic-release workflow to reflect new assets
- remove all previous docker-related build process
- add a new auto-generated command reference file

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,11 @@
+# invalid files
 __tests__/__fixtures__/invalid-json/yikes.json
-CHANGELOG.md
+
+# test result artifacts
 coverage/
+
+# release build artifacts
+CHANGELOG.md
 dist/
+documentation/commands.md
 dist-gha/
