--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@oclif/core": "^4.0.29",
     "@oclif/plugin-autocomplete": "^3.2.6",
     "@oclif/plugin-help": "^6.2.15",
+    "@oclif/plugin-not-found": "^3.2.28",
     "@oclif/plugin-warn-if-update-available": "^3.1.19",
     "chalk": "^5.3.0",
     "ci-info": "^4.0.0",
@@ -170,6 +171,7 @@
     "plugins": [
       "@oclif/plugin-autocomplete",
       "@oclif/plugin-help",
+      "@oclif/plugin-not-found",
       "@oclif/plugin-warn-if-update-available"
     ],
     "topics": {
