--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
     "rollup": "^4.3.0",
+    "tsx": "^4.19.2",
     "type-fest": "^4.3.1",
     "typescript": "^5.1.6",
     "vitest": "^2.0.5"
