Revert "chore: try adding this to see if error comes through properly"
This reverts commit b970e541a9045fad65b2cc505f7730f3bb943df7.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Run `openapi:validate` with filename in quotes
         uses: ./rdme-repo/
         with:
-          rdme: openapi:validate "rdme-repo/__tests__/__fixtures__/invalid-oas.json"
+          rdme: openapi:validate "oas-examples-repo/3.1/json/petstore.json"
 
       # Docs: https://rdme-test.readme.io
       - name: Run `openapi` command
