docs: rewrite all command docs

--- a/package.json
+++ b/package.json
@@ -183,7 +183,7 @@
         "description": "Sync or prune Guides pages in your ReadMe developer hub."
       },
       "openapi": {
-        "description": "Manage your API definition. Supports OpenAPI, Swagger, and Postman."
+        "description": "Manage your API definition (e.g., syncing, validation, analysis, conversion, etc.). Supports OpenAPI, Swagger, and Postman collections, in either JSON or YAML formats."
       },
       "versions": {
         "description": "Manage your documentation versions."
