fix(release): track changes to commands doc directory

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -23,7 +23,8 @@ plugins:
   - [
       '@semantic-release/git',
       {
-        assets: ['CHANGELOG.md', 'documentation/commands.md', 'package.json', 'package-lock.json', 'dist-gha'],
+        assets:
+          ['CHANGELOG.md', 'dist-gha', 'documentation/commands', 'package.json', 'package-lock.json', 'README.md'],
         message: "build(release): 🚀 v${nextRelease.version} 🦉\n\n${nextRelease.notes}\n[skip ci]",
       },
     ]
