feat: add v9 channel(?)

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -3,6 +3,8 @@ branches:
   - name: main
   - name: next
     prerelease: true
+  - name: v9
+    channel: 9.x
 
 plugins:
   - '@semantic-release/commit-analyzer'
