chore: various smol housekeeping things (#1097)
## 🧰 Changes

- [x] Remove an unused snapshot file
- [x] Bump `ora` to the latest (this is now possible since we no longer
have a Docker build process that relies on `pkg` to build binaries)
- [x] Add `eslint` to our list of packages for dependabot to ignore

## 🧬 QA & Testing

Provide as much information as you can on how to test what you've done.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,10 +33,10 @@ updates:
       prefix: chore(deps)
       prefix-development: chore(deps-dev)
     ignore:
-      # See https://github.com/sindresorhus/ora/issues/229
-      - dependency-name: ora
+      # Blocked on this until we can bump our shared ESLint config to support ESLint 9
+      - dependency-name: eslint
         versions:
-          - '>= 7'
+          - '>= 8'
       # There are ProxyAgent discrepancies between undici@6 and
       # the Node.js fetch implementation (which uses undici@5).
       # Until we use undici itself for fetch calls, we should
