ci: add test for both current and legacy separator

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,15 +73,20 @@ jobs:
         run: npm ci && npm run build:gha
         working-directory: rdme-repo
 
-      - name: Run `openapi:validate` command
+      - name: Run `openapi validate` command
+        uses: ./rdme-repo/
+        with:
+          rdme: openapi validate oas-examples-repo/3.1/json/petstore.json
+
+      - name: Run `openapi validate` command (legacy topic separator)
         uses: ./rdme-repo/
         with:
           rdme: openapi:validate oas-examples-repo/3.1/json/petstore.json
 
-      - name: Run `openapi:validate` with filename in quotes
+      - name: Run `openapi validate` with filename in quotes
         uses: ./rdme-repo/
         with:
-          rdme: openapi:validate "oas-examples-repo/3.1/json/petstore.json"
+          rdme: openapi validate "oas-examples-repo/3.1/json/petstore.json"
 
       # Docs: https://rdme-test.readme.io
       - name: Run `openapi` command
