--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,12 +88,12 @@ jobs:
         with:
           rdme: openapi validate "oas-examples-repo/3.1/json/petstore.json"
 
-      - name: Run `openapi:validate` on an invalid file
+      - name: Run `openapi validate` on an invalid file
         uses: ./rdme-repo/
         id: openapi-validate-fail
         continue-on-error: true
         with:
-          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/invalid-oas.json
+          rdme: openapi validate rdme-repo/__tests__/__fixtures__/invalid-oas.json
 
       - name: Assert that previous validation step failed
         if: ${{ steps.openapi-validate-fail.outcome == 'failure' }}
