feat!: switch topic separator to space (#1100)
## 🧰 Changes

BREAKING CHANGE: the topic separator (i.e., what separates a command
from its subcommand) has changed from a colon to a space by default. For
example, `rdme openapi:validate` is now `rdme openapi validate`. The
colon topic separator will continue to be supported so there is no need
to change any existing commands, but all documentation and help screens
will reflect the space topic separator.

## 🧬 QA & Testing

Do tests still pass?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,22 +73,27 @@ jobs:
         run: npm ci && npm run build:gha
         working-directory: rdme-repo
 
-      - name: Run `openapi:validate` command
+      - name: Run `openapi validate` command
+        uses: ./rdme-repo/
+        with:
+          rdme: openapi validate oas-examples-repo/3.1/json/petstore.json
+
+      - name: Run `openapi validate` command (legacy topic separator)
         uses: ./rdme-repo/
         with:
           rdme: openapi:validate oas-examples-repo/3.1/json/petstore.json
 
-      - name: Run `openapi:validate` with filename in quotes
+      - name: Run `openapi validate` with filename in quotes
         uses: ./rdme-repo/
         with:
-          rdme: openapi:validate "oas-examples-repo/3.1/json/petstore.json"
+          rdme: openapi validate "oas-examples-repo/3.1/json/petstore.json"
 
-      - name: Run `openapi:validate` on an invalid file
+      - name: Run `openapi validate` on an invalid file
         uses: ./rdme-repo/
         id: openapi-validate-fail
         continue-on-error: true
         with:
-          rdme: openapi:validate rdme-repo/__tests__/__fixtures__/invalid-oas.json
+          rdme: openapi validate rdme-repo/__tests__/__fixtures__/invalid-oas.json
 
       - name: Assert that previous validation step failed
         if: ${{ steps.openapi-validate-fail.outcome == 'failure' }}
