--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,3 +48,20 @@ jobs:
         with:
           github_token: ${{ secrets.RELEASE_GH_TOKEN }}
           branch: next
+
+  # quick assertion to validate that rdme CLI can be installed and run on ubuntu
+  postrelease:
+    name: Post-release checks
+    needs: release
+    runs-on: ubuntu-latest
+    if: ${{ github.ref }} == 'refs/heads/next'
+    steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Install `rdme` from npm
+        run: npm install -g rdme@next
+      - name: Print rdme CLI version
+        run: rdme --version
+        timeout-minutes: 1
