--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,3 +113,9 @@ jobs:
         uses: ./rdme-repo/
         with:
           rdme: openapi "oas-examples-repo/3.1/json/petstore.json" --key "${{ secrets.RDME_TEST_PROJECT_API_KEY }}" --id=${{ secrets.RDME_TEST_PROJECT_API_SETTING }}
+
+      - name: Run `openapi` command with weird arg syntax
+        uses: readmeio/rdme@next
+        if: ${{ github.ref }} == 'refs/heads/next'
+        with:
+          rdme: openapi validate "oas-examples-repo/3.1/json/petstore.json"
