chore: does this work?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,7 +115,6 @@ jobs:
           rdme: openapi "oas-examples-repo/3.1/json/petstore.json" --key "${{ secrets.RDME_TEST_PROJECT_API_KEY }}" --id=${{ secrets.RDME_TEST_PROJECT_API_SETTING }}
 
       - name: Run `openapi` command with weird arg syntax
-        uses: readmeio/rdme@next
-        if: ${{ github.ref }} == 'refs/heads/next'
+        uses: readmeio/rdme@${{ github.sha }}
         with:
           rdme: openapi validate "oas-examples-repo/3.1/json/petstore.json"
