--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,3 +48,12 @@ jobs:
         with:
           github_token: ${{ secrets.RELEASE_GH_TOKEN }}
           branch: next
+
+      # quick assertion to validate that rdme CLI can be installed and run on ubuntu
+      - name: Install `rdme` from npm
+        if: ${{ github.ref }} == 'refs/heads/next'
+        run: npm install -g rdme@next
+      - name: Print rdme CLI version
+        if: ${{ github.ref }} == 'refs/heads/next'
+        run: rdme --version
+        timeout-minutes: 1
