chore: more CI tests b/c why not

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,18 @@ jobs:
         uses: ./rdme-repo/
         with:
           rdme: openapi upload oas-examples-repo/3.1/json/petstore.json --key=${{ secrets.RDME_REFACTORED_TEST_PROJECT_API_KEY }}
+      - name: Run `openapi` command with env var
+        uses: ./rdme-repo/
+        with:
+          rdme: openapi upload oas-examples-repo/3.1/json/petstore.json
+        env:
+          RDME_API_KEY: ${{ secrets.RDME_REFACTORED_TEST_PROJECT_API_KEY }}
+      - name: Run `openapi` command with other env var
+        uses: ./rdme-repo/
+        with:
+          rdme: openapi upload oas-examples-repo/3.1/json/petstore.json
+        env:
+          README_API_KEY: ${{ secrets.RDME_REFACTORED_TEST_PROJECT_API_KEY }}
       - name: Run `openapi` command with weird arg syntax
         uses: ./rdme-repo/
         with:
