ci: run CI on v9 branch

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,9 +2,9 @@ name: 'CodeQL'
 
 on:
   push:
-    branches: [main, next]
+    branches: [main, next, v9]
   pull_request:
-    branches: [main, next]
+    branches: [main, next, v9]
   schedule:
     - cron: '0 12 * * 1'
 
