--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,14 +43,12 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
 
-      ## the v9 branch is not syncing changes back to next so we can skip this step
-      ## as for why this step keeps getting hit despite the if-statement, no idea
-      # - name: Sync changes back to next
-      #   if: ${{ github.ref }} == 'refs/heads/main'
-      #   uses: ad-m/github-push-action@master
-      #   with:
-      #     github_token: ${{ secrets.RELEASE_GH_TOKEN }}
-      #     branch: next
+      - name: Sync changes back to next
+        if: ${{ github.ref }} == 'refs/heads/main'
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.RELEASE_GH_TOKEN }}
+          branch: next
 
   # quick assertion to validate that rdme CLI can be installed and run on ubuntu
   postrelease:
