--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
+    "experimentalDecorators": true,
     "lib": ["ES2022"],
     "module": "NodeNext",
     "outDir": "dist/",
