ci: fix release workflow

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -4,7 +4,7 @@ branches:
   - name: next
     prerelease: true
   - name: v9
-    channel: 9.x
+    range: 9.x
 
 plugins:
   - '@semantic-release/commit-analyzer'
