--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
         with:
           rdme: openapi validate oas-examples-repo/3.1/json/petstore.json
 
-      # Docs: https://rdme-test.readme.io
+      # Docs: https://rdme-refactored-test.readme.io
       - name: Run `openapi` command
         uses: ./rdme-repo/
         with:
