--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@oclif/plugin-help": "^6.2.15",
     "@oclif/plugin-not-found": "^3.2.28",
     "@oclif/plugin-warn-if-update-available": "^3.1.19",
+    "@readme/better-ajv-errors": "^2.0.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "chalk": "^5.3.0",
     "ci-info": "^4.0.0",
     "configstore": "^7.0.0",
@@ -72,7 +75,6 @@
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
     "@oclif/test": "^4.1.0",
-    "@readme/better-ajv-errors": "^2.0.0",
     "@readme/eslint-config": "^14.0.0",
     "@readme/oas-examples": "^5.10.0",
     "@rollup/plugin-commonjs": "^28.0.0",
@@ -90,11 +92,11 @@
     "@types/validator": "^13.7.6",
     "@vitest/coverage-v8": "^3.0.0",
     "@vitest/expect": "^3.0.0",
-    "ajv": "^8.11.0",
     "alex": "^11.0.0",
     "eslint": "^8.47.0",
     "husky": "^9.0.10",
     "js-yaml": "^4.1.0",
+    "json-schema-to-ts": "^3.1.1",
     "knip": "^5.0.2",
     "nock": "^14.0.0",
     "oclif": "^4.15.12",
