--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -46,4 +46,4 @@ jobs:
       - name: Sync docs to ReadMe
         uses: readmeio/rdme@v9
         with:
-          rdme: docs ./documentation --key=${{ secrets.README_DEVELOPERS_API_KEY }} --version=${{ vars.README_DEVELOPERS_MAIN_VERSION }}
+          rdme: docs ./documentation/legacy/ --key=${{ secrets.README_DEVELOPERS_API_KEY }} --version=${{ vars.README_DEVELOPERS_MAIN_VERSION }}
