docs: warning callouts on outdated pages (#1163)
## 🧰 Changes

adds temporary "this is outdated" callouts to the pages we sync to our
guides, and moves those pages into their own respective `legacy/`
directory.

we'll add new docs to backfill this info (ideally with better separation
of concerns) sometime in the not-too-distant future.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -69,4 +69,4 @@ jobs:
         # Docs: https://docs.github.com/actions/using-workflows/workflow-syntax-for-github-actions#example-using-versioned-actions
         uses: readmeio/rdme@main
         with:
-          rdme: docs ./documentation --key=${{ secrets.README_DEVELOPERS_API_KEY }} --version=${{ vars.README_DEVELOPERS_MAIN_VERSION }}
+          rdme: docs ./documentation/legacy/ --key=${{ secrets.README_DEVELOPERS_API_KEY }} --version=${{ vars.README_DEVELOPERS_MAIN_VERSION }}
