chore: add prettier config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "search.exclude": {
     "**/dist-gha": true,
     "CHANGELOG.md": true,
