--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-replace": "^6.0.1",
-    "@rollup/plugin-terser": "^0.4.4",
     "@types/configstore": "^6.0.0",
     "@types/debug": "^4.1.7",
     "@types/js-yaml": "^4.0.5",
@@ -103,6 +102,7 @@
     "openapi-types": "^12.1.3",
     "prettier": "^3.0.2",
     "rollup": "^4.3.0",
+    "rollup-plugin-esbuild": "^6.2.0",
     "tsx": "^4.19.2",
     "type-fest": "^4.3.1",
     "typescript": "^5.1.6",
