--- a/package.json
+++ b/package.json
@@ -112,7 +112,6 @@
     "build": "tsc && cp package.json dist/package.json",
     "build:docs": "oclif readme --multi --output-dir documentation/commands --no-aliases",
     "build:gha": "npm run build && rollup --config",
-    "build:gha:prod": "npm run build:gha -- --environment PRODUCTION_BUILD",
     "lint": "alex . && knip && npm run lint:ts && npm run prettier && npm run schemas:check",
     "lint:ts": "eslint . --ext .js,.ts",
     "prebuild": "rm -rf dist/ && rm -f src/package.json && ln package.json src/package.json",
@@ -123,7 +122,7 @@
     "schemas:check": "./bin/json-schema-store.js",
     "schemas:write": "./bin/json-schema-store.js --update",
     "test": "vitest run --coverage",
-    "version": "npm run build:gha:prod && oclif manifest && npm run build:docs"
+    "version": "npm run build:gha && oclif manifest && npm run build:docs"
   },
   "commitlint": {
     "extends": [
