chore(deps-dev): upgrading our eslint standards

--- a/__tests__/.eslintrc
+++ b/__tests__/.eslintrc
@@ -3,6 +3,10 @@
   "rules": {
     // vitest currently allows for __dirname, require, etc.
     // see https://github.com/vitest-dev/vitest/issues/2841
-    "unicorn/prefer-module": "off"
+    "unicorn/prefer-module": "off",
+
+    "@vitest/require-mock-type-parameters": "off",
+    "@vitest/padding-around-expect-groups": "off",
+    "@vitest/padding-around-all": "off",
   }
 }
