--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "vitest": "^3.0.0"
   },
   "scripts": {
-    "build": "tsc && cp package.json dist/package.json",
+    "build": "tsc",
     "build:docs": "oclif readme --multi --output-dir documentation/commands --no-aliases",
     "build:gha": "npm run build && rollup --config",
     "build:gha:prod": "npm run build:gha -- --environment PRODUCTION_BUILD",
