--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,11 +100,28 @@ jobs:
 
       - name: Assert that previous validation step failed
         if: ${{ steps.openapi-validate-fail.outcome == 'failure' }}
-        run: echo "The validation in the previous step failed as expected."
+        run: echo "The previous step failed as expected."
 
       - name: Throw error if previous validation step did not fail
         if: ${{ steps.openapi-validate-fail.outcome == 'success' }}
-        run: echo "::error::Expected validation in previous step to fail" && exit 1
+        run: echo "::error::Expected previous step to fail" && exit 1
+
+      # The `help` command is only available in the CLI.
+      # This step should fail because `help` does not exist in GitHub Actions
+      - name: Run `help`
+        uses: ./rdme-repo/
+        id: help-fail
+        continue-on-error: true
+        with:
+          rdme: help
+
+      - name: Assert that previous step failed
+        if: ${{ steps.help-fail.outcome == 'failure' }}
+        run: echo "The previous step failed as expected."
+
+      - name: Throw error if previous step did not fail
+        if: ${{ steps.help-fail.outcome == 'success' }}
+        run: echo "::error::Expected previous step to fail" && exit 1
 
       # this is a test to ensure that the rdme github action can run properly
       # the way that our users invoke it
